--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -106,7 +108,7 @@
                                                       <Slider fx:id="sliderValence" layoutX="105.0" layoutY="170.0" majorTickUnit="1.0" max="10.0" min="1.0" minorTickCount="0" prefHeight="15.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
                                                       <Slider fx:id="sliderDance" layoutX="105.0" layoutY="110.0" majorTickUnit="1.0" max="10.0" min="1.0" minorTickCount="0" prefHeight="15.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
                                                       <Slider fx:id="sliderEnergy" layoutX="105.0" layoutY="50.0" majorTickUnit="1.0" max="10.0" min="1.0" minorTickCount="0" prefHeight="15.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
-                                                      <Button fx:id="resetSurprise" layoutX="182.0" layoutY="345.0" mnemonicParsing="false" onAction="#resetSuprise" prefHeight="26.0" prefWidth="65.0" text="Reset">
+                                                      <Button fx:id="resetSurprise" layoutX="182.0" layoutY="350.0" mnemonicParsing="false" onAction="#resetSuprise" prefHeight="26.0" prefWidth="65.0" text="Reset">
                                                          <font>
                                                             <Font name="Arial" size="14.0" />
                                                          </font></Button>
@@ -123,7 +125,9 @@
                                                          <font>
                                                             <Font name="Arial" size="16.0" />
                                                          </font></Button>
-                                                      <ProgressBar fx:id="progressBarSurprise" layoutX="69.0" layoutY="39.0" prefHeight="20.0" prefWidth="300.0" progress="0.0" />
+                                                      <ProgressIndicator fx:id="progressSurprise" layoutX="302.0" layoutY="-3.0" prefHeight="41.0" prefWidth="24.0" visible="false" />
+                                                      <ProgressIndicator fx:id="progressSurprise" layoutX="301.0" layoutY="-2.0" prefHeight="40.0" prefWidth="50.0" visible="false" />
+                                                      <ProgressBar fx:id="progressSurprise" layoutX="117.0" layoutY="40.0" prefWidth="200.0" visible="false" />
                                                    </children>
                                                 </Pane>
                                              </children>
@@ -132,12 +136,13 @@
                                     </AnchorPane>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                        <children>
-                                          <TableView fx:id="playlistTableSurprise" layoutY="-1.0" prefHeight="650.0" prefWidth="762.0">
+                                          <TableView fx:id="playlistTableSurprise" layoutY="-1.0" prefHeight="525.0" prefWidth="762.0">
                                             <columns>
-                                              <TableColumn fx:id="columnArtistSurprise" editable="false" prefWidth="250.0" sortable="false" text="Artista" />
-                                              <TableColumn fx:id="columnTrackSurprise" editable="false" prefWidth="512.0" sortable="false" text="Titolo" />
+                                              <TableColumn fx:id="columnArtistSurprise" editable="false" maxWidth="200.0" prefWidth="200.0" sortable="false" text="Artista" />
+                                              <TableColumn fx:id="columnTrackSurprise" editable="false" maxWidth="580.0" prefWidth="580.0" sortable="false" text="Titolo" />
                                             </columns>
                                           </TableView>
+                                          <TextArea fx:id="textAreaProgressSurprise" editable="false" layoutX="222.0" layoutY="537.0" prefHeight="100.0" prefWidth="340.0" />
                                        </children></AnchorPane>
                                 </items>
                               </SplitPane>
@@ -192,7 +197,7 @@
                                                 </Pane>
                                                 <Pane prefHeight="444.0" prefWidth="756.0" GridPane.rowIndex="1" GridPane.rowSpan="3">
                                                    <children>
-                                                      <Button fx:id="resetChoiceMix" layoutX="210.0" layoutY="263.0" mnemonicParsing="false" onAction="#resetChoiceMix" prefHeight="26.0" prefWidth="120.0" text="Reset">
+                                                      <Button fx:id="resetChoiceMix" layoutX="219.0" layoutY="263.0" mnemonicParsing="false" onAction="#resetChoiceMix" prefHeight="26.0" prefWidth="155.0" text="Reset">
                                                          <font>
                                                             <Font name="Arial" size="14.0" />
                                                          </font></Button>
@@ -211,11 +216,11 @@
                                                             <Font name="Arial" size="14.0" />
                                                          </font>
                                                       </Label>
-                                                      <Button fx:id="addTrack" alignment="CENTER" layoutX="55.0" layoutY="263.0" mnemonicParsing="false" onAction="#addTrackMix" prefHeight="26.0" prefWidth="120.0" text="Aggiungi">
+                                                      <Button fx:id="addTrack" alignment="CENTER" layoutX="58.0" layoutY="263.0" mnemonicParsing="false" onAction="#addTrackMix" prefHeight="26.0" prefWidth="155.0" text="Aggiungi">
                                                          <font>
                                                             <Font name="Arial" size="14.0" />
                                                          </font></Button>
-                                                      <Button fx:id="resetPlaylistMix" layoutX="55.0" layoutY="313.0" mnemonicParsing="false" onAction="#resetPlaylistMix" prefHeight="26.0" prefWidth="132.0" text="Inizializza Playlist">
+                                                      <Button fx:id="resetPlaylistMix" layoutX="58.0" layoutY="312.0" mnemonicParsing="false" onAction="#resetPlaylistMix" prefHeight="26.0" prefWidth="155.0" text="Inizializza Playlist">
                                                          <font>
                                                             <Font name="Arial" size="14.0" />
                                                          </font></Button>
@@ -227,6 +232,11 @@
                                                             <Font name="Arial" size="12.0" />
                                                          </font>
                                                       </Label>
+                                                      <Button fx:id="buttonremoveLastTrack" layoutX="219.0" layoutY="312.0" mnemonicParsing="false" onAction="#removeLastTrack" prefHeight="26.0" prefWidth="155.0" text="Rimuovi ultimo brano">
+                                                         <font>
+                                                            <Font name="Arial" size="14.0" />
+                                                         </font>
+                                                      </Button>
                                                    </children>
                                                 </Pane>
                                                 <Pane layoutX="25.0" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -235,7 +245,6 @@
                                                          <font>
                                                             <Font name="Arial" size="16.0" />
                                                          </font></Button>
-                                                      <ProgressBar fx:id="progressBarMix" layoutX="61.0" layoutY="55.0" prefHeight="20.0" prefWidth="300.0" progress="0.0" />
                                                    </children>
                                                 </Pane>
                                              </children>
@@ -244,15 +253,16 @@
                                     </AnchorPane>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="755.0">
                                        <children>
-                                          <TableView id="playlistTableMix" fx:id="playlistTableMix" prefHeight="650.0" prefWidth="762.0">
+                                          <TableView id="playlistTableMix" fx:id="playlistTableMix" prefHeight="525.0" prefWidth="762.0">
                                              <columns>
-                                                <TableColumn fx:id="columnArtistMix" editable="false" prefWidth="250.0" resizable="false" sortable="false" text="Artista" />
-                                                <TableColumn fx:id="columnTrackMix" editable="false" prefWidth="512.0" resizable="false" sortable="false" text="Titolo" />
+                                                <TableColumn fx:id="columnArtistMix" editable="false" maxWidth="180.0" prefWidth="180.0" resizable="false" sortable="false" text="Artista" />
+                                                <TableColumn fx:id="columnTrackMix" editable="false" maxWidth="580.0" prefWidth="580.0" resizable="false" sortable="false" text="Titolo" />
                                              </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                              </columnResizePolicy>
                                           </TableView>
+                                          <TextArea fx:id="textAreaProgressMix" editable="false" layoutX="222.0" layoutY="537.0" prefHeight="100.0" prefWidth="340.0" />
                                        </children>
                                     </AnchorPane>
                                  </items>
